[package]
name = "unitool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.1", features = ["derive"] }
colored = "2.0.0"
indicatif = "0.17.4"
quick-xml = { version = "0.28.2", features = ["serde", "serialize"] }
serde = { version = "1.0.163", features = ["derive"] }
